--- a/StudentRegistration.html
+++ b/StudentRegistration.html
@@ -5,24 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
 </head>
-<body>
-<h1>Student Registration</h1>
+<body style="background-color:#5C6965;">
+<div style="text-align:center">
+<h1 style="color:white">Student Registration</h1>
+
 <div class="input-group mb-3">
     <div class="form-floating">
-        <label for="floatingInputGroup1">EUID</label><br>
+        <label for="floatingInputGroup1" style="color:white">EUID</label><br>
         <input type="text" class="form-control" id="floatingInputGroup1" placeholder="abc1234">
     </div>
 </div>
 <div class="form-floating mb-3">
-    <label for="floatingInput">Email address</label><br>
+    <label for="floatingInput" style="color:white">Email address</label><br>
     <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
 
 </div>
 <div class="form-floating">
-    <label for="floatingPassword">Password</label><br>
+    <label for="floatingPassword" style="color:white">Password</label><br>
     <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
 </div>
 <button type="button" class="btn btn-primary btn-lg">Submit</button>
 <button type="button" class="btn btn-secondary btn-lg">Cancel</button>
+</div>
 </body>
 </html>
