--- a/registration.html
+++ b/registration.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>Registration Page</title>
     <style>
       body {
@@ -20,6 +20,15 @@
         border-radius: 10px;
         background-color: #222;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+      }
+      input[type="text"], input[type="fullname"] {
+        width: 100%;
+        padding: 10px;
+        margin: 10px 0;
+        border-radius: 5px;
+        border: none;
+        background-color: #444;
+        color: #fff;
       }
       input[type="text"], input[type="password"] {
         width: 100%;
@@ -66,24 +75,25 @@
         margin-right: 10px;
       }
     </style>
-  </head>
-  <body>
-    <form>
-      <img src="D:\D Dev\3444\Capture.PNG" alt="Logo" class="logo">
-      <input type="text" id="username" name="username" placeholder="Username" required>
-      <input type="password" id="password" name="password" placeholder="Password" required>
-	  <input type="password" id="password" name="password" placeholder="Retype Password" required>
-      <div class="radio-buttons-container">
+</head>
+<body>
+<form>
+    <img src="https://i.ibb.co/PtpLtVP/Logo.png" alt="Logo" class="logo">
+    <input type="text" id="fullname" name="fullname" placeholder="Full Name" required>
+    <input type="text" id="username" name="username" placeholder="Username" required>
+    <input type="password" id="password" name="password" placeholder="Password" required>
+    <input type="password" id="password" name="password" placeholder="Retype Password" required>
+    <div class="radio-buttons-container">
         <span class="radio-button-label">I am a:</span>
         <input type="radio" id="teacher" name="account-type" value="teacher" required>
         <label for="teacher">Teacher</label>
         <input type="radio" id="student" name="account-type" value="student" required>
         <label for="student">Student</label>
-      </div>
-      <div class="button-container">
+    </div>
+    <div class="button-container">
         <input type="submit" value="Register">
         <input type="button" value="Return" class="secondary">
-      </div>
-    </form>
-  </body>
+    </div>
+</form>
+</body>
 </html>
