--- a/registration.html
+++ b/registration.html
@@ -77,7 +77,7 @@
     </style>
 </head>
 <body>
-<form>
+<form method="POST" action="register.php">
     <img src="https://i.ibb.co/PtpLtVP/Logo.png" alt="Logo" class="logo">
     <input type="text" id="fullname" name="fullname" placeholder="Full Name" required>
     <input type="text" id="username" name="username" placeholder="Username" required>
@@ -85,14 +85,14 @@
     <input type="password" id="password" name="password" placeholder="Retype Password" required>
     <div class="radio-buttons-container">
         <span class="radio-button-label">I am a:</span>
-        <input type="radio" id="teacher" name="account-type" value="teacher" required>
+        <input type="radio" id="teacher" name="role" value="teacher" required>
         <label for="teacher">Teacher</label>
-        <input type="radio" id="student" name="account-type" value="student" required>
+        <input type="radio" id="student" name="role" value="student" required>
         <label for="student">Student</label>
     </div>
     <div class="button-container">
         <input type="submit" value="Register">
-        <input type="button" value="Return" class="secondary">
+        <a href="index.php"><input type="button" value="Return" class="secondary"></a>
     </div>
 </form>
 </body>
